[package]
name = "review-macro"
version = "0.2.0"
description = "A React-inspired framework for making client-side single-page apps"
authors = [
  "Simone Camito"
]
repository = "https://github.com/MalpenZibo/review"
documentation = "https://docs.rs/review-macro"
homepage = "https://malpenzibo.github.io/review"
keywords = ["web", "wasm", "webassembly", "review", "gui"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0.6"
proc-macro-error = "1"