[package]
name = "review"
version = "0.1.1"
description = "A React-inspired framework for making client-side single-page apps"
repository = "https://github.com/MalpenZibo/review"
keywords = ["web", "webasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../README.md"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
review-macro = { path = "../review-macro", version = "0.1.0" }

wasm-bindgen = "0.2.78"

strum = "0.20"
strum_macros = "0.20"
downcast-rs = "1.2.0"

log = "0.4"
console_log = { version = "0.2", features = ["color"] }
log-panics = { version = "2.0.0" }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "Document",
  "Element",
  "Text",
  "HtmlElement",
  "Node",
  "NodeList",
  "Window",
  "MouseEvent",
  "HtmlButtonElement",
  "EventListener",
  "IdleDeadline"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
